# DeepQt

./: .gitignore  DeepQt-flatpak.desktop  DeepQt.desktop  Makefile  README.md  Web card.xcf  build-nuitka.sh  build-pyinstaller.bat  build-pyinstaller.sh  build.sh  cleanup.sh  com.voxel.deepqt.yaml  glossary_docs.md  pyproject.toml  requirements.txt  setup.cfg
Glossary Templates/: Glossary_template.ods  Glossary_template.xlsx  Glossary_template_JP.ods  Glossary_template_JP.xlsx
deepq/: __init__.py  api_interface.py  config.py  driver_api_config.py  driver_mainwindow.py  driver_text_preview.py  file_table.py  glossary.py  helpers.py  main.py  quote_protection.py  structures.py  worker_thread.py
deepqt/: __init__.py  api_interface.py  backend_settings.py  config.py  constants.py  driver_api_config.py  driver_api_key_input.py  driver_api_status_usage.py  driver_backend_configuration.py  driver_backend_selection.py  driver_epub_preview.py  driver_mainwindow.py  driver_text_preview.py  error_dialog_driver.py  file_table.py  glossary.py  gui_utils.py  helpers.py  html_cleaner.py  issue_reporter_driver.py  key_button.py  log_parser.py  log_viewer.py  main.py  memory_watcher.py  quote_protection.py  state_saver.py  structures.py  term_extractor.py  translation_interface.py  trie.py  utils.py  worker_thread.py  xml_parser.py
docs/: api_help.md  glossary_help.md
fallback-icons/: fallback_icons.qrc
flatpak/: io.github.voxelcubes.deepqt.appdata.xml
icons/: build_icon_cache.py  copy_from_dark_to_light.py  icons.qrc  theme_icons.qrc  theme_list.yaml
media/: Web card.xcf
(+78 files in other folders)
