[metadata]
name = deepqt
version = attr: deepqt.__version__
description = attr: deepqt.__description__
description_file = README.md
keywords = deepl, deepl api, qt, pyside6
license = GPLv3
license_file = LICENSE
classifiers =
    Framework :: PySide6
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",

[options]
install_requires =
    deepl
    logzero
    PySide6
    xdg
    pandas
    pyexcel-odsr
    openpyxl
    python_version > "3.10"
packages=find:

[options.entry_points]
console_scripts =
    deepqt = deepqt.main:main
