[metadata]
name = deepqt
version = 0.1.2
description = Harness the power of the DeepL API with this friendly user interface.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/VoxelCubes/DeepQt
keywords = deepl, deepl api, qt, pyside6
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    deepl
    logzero
    PySide6
    xdg
    pandas
    pyexcel-odsr
    openpyxl
    python_version > "3.10"
packages=find:

[options.entry_points]
console_scripts =
    deepqt = deepqt.main:main
